RESOLVED FIXED123269
[WinCairo] Compile fixes.
https://bugs.webkit.org/show_bug.cgi?id=123269
Summary [WinCairo] Compile fixes.
peavo
Reported 2013-10-24 06:59:30 PDT
The WinCairo build needs a couple of compile fixes. The WebCore\platform\network\CertificateInfo class has been removed, the Curl implementation should also be removed, as it no longer compiles. The BitmapImage draw member has gotten an extra parameter, the WinCairo implementation needs to update.
Attachments
Patch (7.19 KB, patch)
2013-10-24 07:07 PDT, peavo
no flags
Patch (2.90 KB, patch)
2013-10-25 01:11 PDT, peavo
no flags
peavo
Comment 1 2013-10-24 07:07:49 PDT
Peter Gal
Comment 2 2013-10-24 07:14:15 PDT
(In reply to comment #1) > Created an attachment (id=215062) [details] > Patch For the removal of the CertificateInfo there is already an r+/cq+ patch: https://bugs.webkit.org/show_bug.cgi?id=123246
Brent Fulgham
Comment 3 2013-10-24 09:03:29 PDT
Comment on attachment 215062 [details] Patch Looks like we have a conflict with Alex's patch from yesterday. Can you rebase this patch with his update? I think that will just give you the ImageCairoWin fixes.
peavo
Comment 4 2013-10-25 01:11:45 PDT
peavo
Comment 5 2013-10-25 01:12:48 PDT
(In reply to comment #3) > (From update of attachment 215062 [details]) > Looks like we have a conflict with Alex's patch from yesterday. Can you rebase this patch with his update? I think that will just give you the ImageCairoWin fixes. Rebased :)
Csaba Osztrogonác
Comment 6 2013-10-25 04:23:33 PDT
Comment on attachment 215147 [details] Patch rs=me
WebKit Commit Bot
Comment 7 2013-10-25 04:47:25 PDT
Comment on attachment 215147 [details] Patch Clearing flags on attachment: 215147 Committed r158001: <http://trac.webkit.org/changeset/158001>
WebKit Commit Bot
Comment 8 2013-10-25 04:47:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.