[WinCairo] Compile fixes. https://bugs.webkit.org/show_bug.cgi?id=123269

Patch by peavo@outlook.com <peavo@outlook.com> on 2013-10-25
Reviewed by Csaba Osztrogonác.

* platform/graphics/win/ImageCairoWin.cpp: Added new parameter to BitmapImage::draw() calls.
(WebCore::BitmapImage::getHBITMAPOfSize):
(WebCore::BitmapImage::drawFrameMatchingSourceSize):

Canonical link: https://commits.webkit.org/141427@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158001 268f45cc-cd09-0410-ab3c-d52691b4dbfc